--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Ruluko);
 
 body {
+  background-color: red;
   font-family: 'Ruluko', sans-serif;
   margin: 0px auto;
   text-align: center;
